fix(themes): fixed wrong word-wrap value
Ticket: MEN-9552

--- a/packages/themes/src/Mender/styles/main.less
+++ b/packages/themes/src/Mender/styles/main.less
@@ -111,7 +111,7 @@ time,
 .break-all {
   white-space: normal;
   word-break: break-all;
-  word-wrap: break-all;
+  word-wrap: anywhere;
 }
 
 .hidden {
